<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BabyGuard</string>
    <string name="company_url">https://www.netguru.com/</string>
    <string name="google_storage_bucket">stub</string>

    <string name="discovering_services_error">Error while discovering services</string>
    <string name="no_name">Your baby name</string>
    <string name="settings">Settings</string>
    <string name="specify_this_device_title">Specify this\ndevice</string>
    <string name="start_by_defining_this_device_description">Let’s start by defining this device</string>
    <string name="splash_by_netguru">by <u>Netguru</u></string>
    <string name="splash_crafted_with">Crafted with</string>
    <string name="rate_us">Rate us</string>
    <string name="reset">Reset the connection</string>
    <string name="allow_to_send_recordings">Send anonymized baby voice recordings</string>
    <string name="send_recordings_info">Don\'t worry, your data is safe. We only use\nvoice recordings for app development. What\ndoes it mean?\n\nWith your help, BabyGuard will learn to\nrecognise baby voices more accurately! The\ndata is sent automatically and only over\nWiFi.</string>

    <string name="feature_a_text_1">Do your daily errands and\nkeep an eye on your baby</string>
    <string name="feature_a_text_2">Easily check on the baby anywhere\nand anytime you want.</string>
    <string name="feature_b_text_1">Crying baby or noise detected alert</string>
    <string name="feature_b_text_2">You\'ll get a notification when your baby starts crying (beta) or some noise will be detected.\nYou can set the exact sound detection setting on parent’s device.</string>
    <string name="feature_c_text_1">Your privacy is safe when\nusing BabyGuard</string>
    <string name="feature_c_text_2">Video and audio will not be recorded, unless\nyou want to help us develop the app and\ngive your permission to do it.</string>
    <string name="feature_d_text_1">Send anonymized baby\nvoice recordings</string>
    <string name="feature_d_text_2">Voice recordings are only used for\ndevelopment purposes and never without\nyour permission.</string>
    <string name="feature_next_btn">Next</string>
    <string name="feature_skip_btn">Skip</string>
    <string name="feature_lets_start">Let\'s start!</string>

    <string name="connecting_description">Get started by \nconnecting\nBabyGuard to \nWi-Fi</string>
    <string name="connect_to_wi_fi">Connect to Wi-Fi</string>
    <string name="cancel">Cancel</string>
    <string name="connect_wifi_connected">Next</string>

    <string name="camera_permission_ok">Tap “OK” to keep an\neye on your baby!</string>
    <string name="camera_permission_guard_info">Don\'t worry - we care about your safety. No video\nwill not be recorded and we will protect you from any\ndata leakage.</string>
    <string name="microphone_permission_ok">Tap “OK” if you want \nto know if your baby \nis crying</string>
    <string name="microphone_permission_guard_info">>Don\'t worry - we care about your safety. Voice will\nonly be recorded with your permission, and will only\nbe used to let you know if your baby us crying.</string>
    <string name="permission_denied">Permissions denied</string>
    <string name="permission_denied_info">BabyGuard is\nunable to work\nwithout permissions</string>
    <string name="permission_denied_are_you_sure">Are you sure you want to deny\npermissions?</string>
    <string name="permission_denied_retry_button">Re-try</string>
    <string name="permission_denied_sure_button">I\'m sure</string>
    <string name="no_external_storage_permission">The permission to access the external storage is not set. Please contact the developer.</string>

    <string name="setup_information">Setup information</string>
    <string name="connecting_setup_information">Put this device next\nto your baby\'s bed, so\nthat you can see him\nor her in a real time\nview</string>
    <string name="start_monitoring">Start monitoring</string>

    <string name="connecting">Connecting</string>
    <string name="try_again">Try again</string>
    <string name="all_done_title">All done!</string>
    <string name="all_done_description">You can now start using BabyGuard!</string>
    <string name="get_started">Get started</string>
    <string name="notification_baby_is_crying_title">Your baby is crying!</string>
    <string name="notification_baby_is_crying_content">Check what happened on live camera.</string>
    <string name="notification_channel_name">BabyGuard channel</string>
    <string name="notification_channel_description">Notifications for BabyGuard</string>
    <string name="notification_channel_id">baby-monitor-channel</string>

    <string name="notification_foreground_content_title">Secure monitoring</string>
    <string name="notification_foreground_content_text">Keeping an eye on your baby</string>

    <string name="notification_low_battery_title">Low battery</string>
    <string name="notification_low_battery_text">Monitor device battery is low. Make sure to plug in a charger soon!</string>

    <string name="child_not_available">Child not available</string>
    <string name="dialog_title_choose_source">Choose source</string>

    <string name="nsd_service_registration_failed">Device discovery registration failed</string>

    <string name="devices_disconnected">Devices disconnected</string>
    <string name="devices_connected">Devices connected</string>
    <string name="parent">Parent</string>
    <string name="parent_button_description">This device will stay \nwith me</string>
    <string name="baby">Baby</string>
    <string name="baby_button_description">This device will stay \nwith my baby</string>

    <string name="sync_header">Prepare two devices\nfor setup</string>
    <string name="sync_description"><![CDATA[<font color=#9c8fff>You need two devices to start using<br>BabyGuard. </font><font color=#ffffff>One</font><font color=#9c8fff>, to monitor your baby<br>in a room, and </font><font color=#ffffff>the other</font><font color=#9c8fff> to show<br>a real time view of your baby, when<br>you leave the room.</font>]]></string>
    <string name="sync_now_go">Now go to the step where you decide if this\ndevice will stay with you or with your baby</string>

    <string name="end_of_logs_info">It seems you don’t have more notifications!\nEnjoy using BabyGuard!</string>
    <string name="your_baby_name">Your baby name</string>
    <string name="latest_activity">Latest activity</string>

    <string name="date_today">Today, %1$s</string>
    <string name="date_yesterday">Yesterday, %1$s</string>
    <plurals name="minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>

    <string name="hello">Hello!</string>

    <string name="second_app_info_text_3">It’s time to install BabyGuard \non your second device</string>
    <string name="second_app_info_text_4">IMPORTANT: Make sure you have already installed\nBabyGuard on baby device</string>
    <string name="second_app_info_text_button">Connect devices</string>

    <string name="connecting_devices_description_text">Searching for\nsecond device</string>

    <string name="connecting_devices_failed_text_1">Oops! Something\nwent wrong :(</string>
    <string name="connecting_devices_failed_text_2">Make sure that you are connected\nto the same Wi-Fi network</string>

    <string name="message_video_preview_disabled_tap_to_enable">Video preview disabled to conserve energy. Tap to enable it.</string>
    <string name="message_disabling_video_preview_soon">Disabling video preview in %s</string>

    <string name="version">Version %s (%d)</string>
    <string name="tos_confirmation">By clicking next, you agree to our &lt;a href="https://www.netguru.com/tos">Terms of Service&lt;/a>.</string>

    <string name="notification_show_camera">Show camera</string>
    <string name="notification_5_minutes_snooze">Snooze for 5 minutes</string>

    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_snooze_title">Notification snooze</string>
    <string name="dialog_snooze_message">Do you want to snooze notification for 5 minutes?</string>
    <string name="no_internet_message">Your wifi don\'t have internet connection. Notifications won\'t work. Try again.</string>
    <string name="specify_this_device">Specify this device</string>
    <string name="restart">Restart</string>
    <string name="refresh_list">Refresh the list</string>
    <string name="stream_error">Error while connecting to the stream</string>

    <string name="security_code_information">Compare the security code and accept on the Baby device</string>
    <string name="pairing_dialog_title">Confirm pairing code</string>
    <string name="pairing_dialog_message">A device with code %1$s would like to connect.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="unknown_device">Unknown device</string>
    <string name="parent_microphone_permission">You won\'t be able to talk to your child without this permission</string>
    <string name="check_again">Check again</string>

    <string name="notification_noise_detected_title">Noise detected!</string>
    <string name="noise_detection">Noise Detection</string>
    <string name="cry_detection">Cry Detection</string>

    <string name="default_error_message">Something wrong happened.</string>
    <string name="noise_level">Noise level</string>
</resources>
