<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalTopImageCGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/featureCIv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalBottomImageCGl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalTopImageCGl"
        app:srcCompat="@drawable/feature_c" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalBottomImageCGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalTop1TextCGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/featureCTv1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center"
        android:text="@string/feature_c_text_1"
        android:textColor="@color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalBottom1TextCGl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalTop1TextCGl" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalBottom1TextCGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.684" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalTop2TextCGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/featureCTv2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/rubik_regular"
        android:gravity="center"
        android:text="@string/feature_c_text_2"
        android:textColor="@color/accent"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalBottom2TextCGl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalTop2TextCGl" />

    <TextView
        android:id="@+id/tos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxsmall"
        android:gravity="center_horizontal"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalBottom2TextCGl"
        tools:text="@string/tos_confirmation"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalBottom2TextCGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.767" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/presentationCIndicatorTopGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.846" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/presentationCIndicatorTopGl"
        app:srcCompat="@drawable/feature_c_indicator" />

    <include layout="@layout/onboarding_buttons" />

</androidx.constraintlayout.widget.ConstraintLayout>
